# NexusTGTest

./: .env.expample  Dockerfile  README.md  docker-compose.yml  install.ps1  install.sh  language_EN.json  language_RU.json  main.py  pyproject.toml
core/: auth.py  config.py  db.py  services.py  utils.py
data/: cookies.txt  core_database.db  saver_cache.sqlite
modules/: ai_command.py  ai_twin.py  fake_activity.py  info.py  message_saver.py  shop_list.py  voice_transcriber.py
